# alchemist_py

./: .gitignore  LICENSE  README-jp.md  README.md  setup.cfg
alchemist_py/: argument_parser.py  brokergen.py  deviceinfo.py  lex.py  main.py  parsetab.py  plugin_manager.py  project_manager.py  tclgen.py  xdcgen.py  yacc.py
alchemist_py/board_files/Xilinx/: zybo-z7-20.toml
alchemist_py/template/: README.md
alchemist_py/template/broker/: Makefile
alchemist_py/template/broker/cc/: code.cc  header.h
alchemist_py/template/broker/tcl/: csynth.tcl  init.tcl
alchemist_py/template/tcl/: head.tcl  tail.tcl
doc/en/: Common.md
doc/jp/: AlchemistCommonManual.md  AlchemistDevelopersManual.md  AlchemistUsersManual.md  Common.md  ForDevelopers.md  ForUsers.md  README.md
