[metadata]
name = alchemist_py
version = 1.0.0
author = Kenta Arai
license = MIT License

[options]
packages = find:
install_requires =
    gitpython
    jinja2
    logzero
    numpy
    toml

[options.entry_points]
console_scripts =
    alchemist = alchemist_py.main:main

[options.package_data]
alchemist_py =
    usage/*
    template/*
    template/broker/*
    template/broker/cc/*
    template/broker/tcl/*
    template/tcl/*
    board_files/Xilinx/*
